--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "src/django-session-csrf"]
 	path = src/django-session-csrf
 	url = git://github.com/mozilla/django-session-csrf.git
+[submodule "src/django"]
+	path = src/django
+	url = git://github.com/django/django.git
